Deploy/Test-Project-IngressResource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testproject-ingress
  namespace: testproject
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - testproject.baladevopsforyou.com
    secretName: testproject-tls
  rules:
  - host: testproject.baladevopsforyou.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dotnet-app-svc
            port:
              number: 80
