Deploy/TestProject-Deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testproject
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-app-deployment
  namespace: testproject
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
      - name: dotnet-container
        image: testprojectcicd.azurecr.io/testprojectcicd-myimage:84
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-app-svc
  namespace: testproject
spec:
  type: ClusterIP
  selector:
    app: dotnet-app
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-app-ingress
  namespace: testproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-app-svc
                port:
                  number: 80
